# rust-dataverse

./: .gitignore  Cargo.toml  License.md  Readme.md  collection_input.yml
.github/workflows/: tests.yml
examples/create-upload-publish/: Readme.md  collection.json  file.json  workflow.sh
models/: message.json
models/collection/: content.json  create.json
models/dataset/: create.json  edit.json
models/directupload/: tickets.json  upload.json
models/file/: filemeta.json
models/info/: version.json
src/: callback.rs  client.rs  filewrapper.rs  identifier.rs  lib.rs  main.rs  progressbar.rs  request.rs  response.rs  test_utils.rs  utils.rs
src/cli/: base.rs  collection.rs  dataset.rs  file.rs  info.rs
src/directupload/: register.rs  tickets.rs  uploader.rs
src/models/: collection.rs  info.rs
src/native_api/: collection.rs  info.rs
src/native_api/collection/: content.rs  create.rs  delete.rs  publish.rs
src/native_api/dataset/: create.rs  delete.rs  edit.rs  get.rs  link.rs  publish.rs  upload.rs
src/native_api/file/: replace.rs  upload.rs
src/native_api/info/: version.rs
tests/: collection.rs  dataset.rs  info.rs
tests/fixtures/: create_dataset_body.json  create_invalid_dataset_body.json  edit_dataset_body.json  upload_datafile_body.json
