[package]
name = "dataverse"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive", "cargo"] }
colored = "2.1.0"
exitcode = "1.1.2"
regress = "0.10.0"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
typify = "0.1.0"
colored_json = "5.0.0"
structopt = "0.3.26"
atty = "0.2.14"
indicatif = "0.17.8"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
bytes = "1.7.1"
futures = "0.3.30"
md5 = "0.7.0"

[[bin]]
name = "dvcli"
path = "src/bin/cli.rs"

[dev-dependencies]
httpmock = "0.7.0"
lazy_static = "1.4.0"
rand = "0.9.0-alpha.1"
